navbar spacing fix; disable edit hold temporarily

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -16,10 +16,10 @@ body {
 
 .grid-nav {
   display: grid;
-  gap: 0px;
+  gap: 2rem;
   grid-template-columns: 1fr 1fr 3fr 1fr 1fr;
   grid-template-areas: 'one two three four five';
-  padding: 1rem 1rem 0.5rem 1rem;
+  padding: 1rem 0rem 0.5rem 0rem;
   border-bottom: 1px solid #ff4242;
   background-color: black;
 }
@@ -32,7 +32,6 @@ body {
 .nav-box:nth-child(1) {
   grid-area: one;
   place-self: center;
-  padding-right: 75%;
 }
 .nav-box:nth-child(2) {
   grid-area: two;
@@ -51,7 +50,6 @@ body {
 .nav-box:nth-child(5) {
   grid-area: five;
   place-self: center;
-  padding-left: 75%;
 }
 
 .user-nav-icon {
