--- a/public/stylesheets/timer.css
+++ b/public/stylesheets/timer.css
@@ -1,110 +1,108 @@
 body {
-    font-family: 'Encode Sans', sans-serif;
-    background-color: black;
-    color: white;
+  font-family: 'Encode Sans', sans-serif;
+  background-color: black;
+  color: white;
 }
 
 .timer-nums {
-    font-size: 2.5rem;
-    color: rgb(255, 255, 255);
-    padding-right: 1rem;
-    transition: 2s ease;
+  font-size: 2.5rem;
+  color: rgb(255, 255, 255);
+  padding-right: 1rem;
+  transition: 2s ease;
 }
 
 .timer-text {
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
-    transition: 2s ease;
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
+  transition: 2s ease;
 }
 
 .sec {
-    padding-left: 1rem;
+  padding-left: 1rem;
 }
 
 .noteText {
-    font-size: 0.7rem;
+  font-size: 0.7rem;
 }
 
 .main-container {
-    width: min(95%, 35rem);
-    margin-inline: auto;
+  width: min(95%, 35rem);
+  margin-inline: auto;
 }
 
 .grid-nav {
-    display: grid;
-    gap: 0px;
-    grid-template-columns: 1fr 1fr 3fr 1fr 1fr;
-    grid-template-areas: 'one two three four five';
-    padding: 1rem 1rem 0.5rem 1rem;
-    border-bottom: 1px solid #ff4242;
-    background-color: black;
-  }
-  .sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-  }
-  
-  .nav-box:nth-child(1) {
-    grid-area: one;
-    place-self: center;
-    padding-right: 75%;
-  }
-  .nav-box:nth-child(2) {
-    grid-area: two;
-    place-self: center;
-  }
-  
-  .nav-box:nth-child(3) {
-    grid-area: three;
-    place-self: center;
-  }
-  .nav-box:nth-child(4) {
-    grid-area: four;
-    place-self: center;
-  }
-  
-  .nav-box:nth-child(5) {
-    grid-area: five;
-    place-self: center;
-    padding-left: 75%;
-  }
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 1fr 1fr 3fr 1fr 1fr;
+  grid-template-areas: 'one two three four five';
+  padding: 1rem 0rem 0.5rem 0rem;
+  border-bottom: 1px solid #ff4242;
+  background-color: black;
+}
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+.nav-box:nth-child(1) {
+  grid-area: one;
+  place-self: center;
+}
+.nav-box:nth-child(2) {
+  grid-area: two;
+  place-self: center;
+}
+
+.nav-box:nth-child(3) {
+  grid-area: three;
+  place-self: center;
+}
+.nav-box:nth-child(4) {
+  grid-area: four;
+  place-self: center;
+}
+
+.nav-box:nth-child(5) {
+  grid-area: five;
+  place-self: center;
+}
 .controls {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .myB {
-    width: 25vw;
-    max-width: 30%;
+  width: 25vw;
+  max-width: 30%;
 }
 
 .dot-container {
-    display: flex;
-    margin-top: 1rem;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  margin-top: 1rem;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .square {
-    background-color: rgb(0, 0, 0);
-    height: 12px;
-    width: 12px;
-    margin: 2px;
-    transition: 2s ease;
+  background-color: rgb(0, 0, 0);
+  height: 12px;
+  width: 12px;
+  margin: 2px;
+  transition: 2s ease;
 }
 
 .num-display {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .user-status-text {
-    color: white;
-    font-size: 0.625rem;
-    text-decoration: none;
+  color: white;
+  font-size: 0.625rem;
+  text-decoration: none;
 }
 
 .user-nav-icon {
-    padding-left: .25rem;
+  padding-left: 0.25rem;
 }
